Course and teacher model mograted

--- a/RMS.Server/appsettings.json
+++ b/RMS.Server/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "LmsDbContext": "server=./SQLEXPRESS;database=LmsApp;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "LmsDbContext": "server=.\\SQLEXPRESS;database=LmsApp;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -15,4 +15,4 @@
       }
     }
   }
-}
+  }
