Courses Controller created

--- a/RMS.Server/RMS.Server.csproj
+++ b/RMS.Server/RMS.Server.csproj
@@ -20,6 +20,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Model\Model.csproj" />
+    <ProjectReference Include="..\RequestModel\RequestModel.csproj" />
+    <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
 
 </Project>
